[package]
name = "meme"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["query", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.58", features = ["derive"] }
dotenv = "0.15.0"